style: Fix visibility tooltip alignment inside modals

--- a/src/app/cdk/privacy-selector/privacy-selector/privacy-selector.component.scss
+++ b/src/app/cdk/privacy-selector/privacy-selector/privacy-selector.component.scss
@@ -43,6 +43,11 @@ button {
   }
 }
 
+.privacy-selector.start {
+  left: unset;
+  margin: unset;
+}
+
 .panel:hover + .hide {
   display: block;
 }
